# spa

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.json
.claude/agents/: ui-reviewer.md
.claude/skills/new-component/: SKILL.md
.claude/skills/new-module/: SKILL.md
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.tsx  bindings.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  schema.rs  utils.rs
src-tauri/src/entries/: mod.rs  models.rs  service.rs
src-tauri/src/products/: mod.rs  models.rs  service.rs
src-tauri/src/sales/: mod.rs  models.rs  service.rs
src-tauri/src/similar/: mod.rs  models.rs  service.rs
src-tauri/src/similares/: mod.rs  models.rs  service.rs
src-tauri/src/stock/: mod.rs  models.rs  service.rs
src-tauri/src/vendas/: mod.rs  models.rs  service.rs
src/components/forms/: SettingsDialog.tsx
src/components/ui/: Card.tsx  CostHistoryChart.tsx  Dialog.tsx  EntriesHistoryChart.tsx  Header.tsx  Input.tsx  IntervalSelect.tsx  LineFilterSelect.tsx  ProductSearch.tsx  SalesHistoryChart.tsx  StatCard.tsx  TransactionCard.tsx
src/pages/: Dashboard.tsx
src/schemas/: dbConnection.ts
src/stores/: interval.ts  proforlinFilter.ts  selectedProduct.ts  taurpc.ts  theme.ts
src/types/: product.ts
